--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,40 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+
 body {
     padding-top: 60px;
     padding-bottom: 40px;
+	font-family: 'Raleway', sans-serif;
 }
 
+h1 {
+	border-bottom: 3px solid #607d8b;
+}
 .zf-green {
     color: #68b604;
 }
 
+.navbar {
+	background: #009688;
+	border-bottom: 1px solid grey;
+}
+
+a, a:hover{
+	color:#009688;
+}
+
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:active {
+	background: none;
+	box-shadow: none;
+}
+
+.navbar-inverse .navbar-nav > .active > a:hover {
+	font-weight: bold;
+}
+
+.navbar-inverse .navbar-brand {
+	color: white;
+	font-style:italic;
+}
 .btn-success {
   background-color: #57a900;
   background-image: -moz-linear-gradient(top, #70d900, #57a900);
@@ -34,4 +62,8 @@ div.container a.brand {
     background: url("../img/zf2-logo.png") no-repeat scroll 0 10px transparent;
     margin-left: 0;
     padding: 8px 20px 12px 40px;
+}
+
+footer {
+	text-align:center;
 }
