--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -39,7 +39,13 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
 
-						<?php if($this->url() != "/auth") { ?>
+						<?php if(!$hasIdentity && $this->url() == "/auth") { ?>
+                        <li class="active"><a href="<?php echo $this->url('sign') ?>"><?php echo $this->translate('S\'inscrire') ?></a></li>
+						<?php } ?>
+						<?php if(!$hasIdentity && $this->url() == "/sign") { ?>
+                        <li class="active"><a href="<?php echo $this->url('login') ?>"><?php echo $this->translate('Se connecter') ?></a></li>
+						<?php } ?>
+						<?php if($hasIdentity) { ?>
                         <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Accueil') ?></a></li>
 						<?php } ?>
 						<?php if($hasIdentity) { ?>
