--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -47,6 +47,7 @@
 						<?php } ?>
 						<?php if($hasIdentity) { ?>
                         <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Accueil') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('friend') ?>"><?php echo $this->translate('Mes amis') ?></a></li>
 						<?php } ?>
 						<?php if($hasIdentity) { ?>
                         <li class="active"><a href="/auth/logout"><?php echo $this->translate('Déconnexion') ?></a></li>
