--- a/module/Friend/view/friend/friend/friend.phtml
+++ b/module/Friend/view/friend/friend/friend.phtml
@@ -2,11 +2,88 @@
  
 
  if($exists) {
- var_dump($friend);
- var_dump($restaurants);
+ //var_dump($friend);
+ //var_dump($restaurants);
  
- 
- echo "lien d'ajout / acceptation";
+ echo "	
+		<div class=\"row\">
+			<div class=\"col-md-12\">
+				<div class=\"page-header\">
+					<h2>".$friend["real_name"]."";
+?><?php
+					if($friend["friendship"]==1){
+						echo "
+					<small>".$friend["email"]."</small>";
+					}
+
+					switch($friend["friendship"]){
+						
+						case -1:
+							echo "<a class=\"btn btn-default\" href=\"http://zend.localhost/friend/add/".$friend["id"]."\" role=\"button\" style=\"float:right;\">Ajouter aux amis</a></h2>";
+							break;
+						case 0:
+							if($friend["i_am_adder"]){
+								echo "<a class=\"btn btn-default\" href=\"http://zend.localhost/friend/add/".$friend["id"]."\" role=\"button\" style=\"float:right;\">Demande envoyée</a></h2>";
+							}
+							else{
+								echo "<a class=\"btn btn-default\" href=\"http://zend.localhost/friend/add/".$friend["id"]."\" role=\"button\" style=\"float:right;\">Accepter la demande d'amis</a></h2>";
+							}
+							
+							break;
+						case 1:
+							echo "<a class=\"btn btn-default\" href=\"http://zend.localhost/friend/add/".$friend["id"]."\" role=\"button\" style=\"float:right;\">Vous êtes amis</a></h2>";
+							break;
+						
+					}
+?><?php
+				echo"	 
+				</div>
+			</div>
+		</div>	
+		
+		<div style=\"font-size:20px;font-weight:bold;\">Liste de restaurants</div>";
+?>
+<?php
+		echo "
+			";
+?>
+	<?php foreach ($restaurants as $restaurant) : ?>
+	<?php
+		echo "
+		<div class=\"panel panel-default\">
+		  <div class=\"panel-body\">
+		  
+		  <div class=\"row\">
+				<div class=\"col-md-2\"><h4>Nom</h4></div>
+				<div class=\"col-md-4\"><h4>Adresse</h4></div>
+				<div class=\"col-md-4\"><h4>Commentaire</h4></div>
+				<div class=\"col-md-2\"><h4>Note sur 5</h4></div>
+			</div>
+			
+			<div class=\"row\">
+				<div class=\"col-md-2\">".$restaurant->name."</div>
+				<div class=\"col-md-4\">".$restaurant->address."</div>
+				<div class=\"col-md-4\">".$restaurant->comment."</div>
+				<div class=\"col-md-2\"style=\"font-size:20px;\">";
+				
+				
+				for($i=1; $i < 6; $i++){
+					if($i<=$restaurant->mark){
+						echo "<div class=\"glyphicon glyphicon-star\"></div>";
+					}
+					else{
+						echo "<div class=\"glyphicon glyphicon-star-empty\"></div>";
+					}
+				}				
+				
+				echo"</div>
+				
+			</div>
+		  </div>
+		</div>";
+	?>
+	<?php endforeach;?>
+	<?php
  }
  else {
 	 
