--- a/module/Restaurant/view/restaurant/restaurant/index.phtml
+++ b/module/Restaurant/view/restaurant/restaurant/index.phtml
@@ -1,18 +1,20 @@
  <?php
  // module/Restaurant/view/restaurant/restaurant/index.phtml:
 
- $title = 'My restaurants';
+ $title = 'Mes restaurants';
  $this->headTitle($title);
  ?>
- <h1><?php echo $this->escapeHtml($title); ?></h1>
- <p>
-     <a href="<?php echo $this->url('restaurant', array('action'=>'add'));?>">Add new restaurant</a>
- </p>
+ <h1>
+	<?php echo $this->escapeHtml($title); ?>
+	<a class="btn btn-primary" style="float:right;"  role="button" href="<?php echo $this->url('restaurant', array('action'=>'add'));?>">Ajouter un restaurant</a>
+ </h1>
+ 
+
 
  <table class="table">
  <tr>
-     <th>Name</th>
-     <th>Address</th>
+     <th>Nom</th>
+     <th>Adresse</th>
      <th>&nbsp;</th>
  </tr>
  <?php foreach ($restaurants as $restaurant) : ?>
@@ -21,9 +23,9 @@
      <td><?php echo $this->escapeHtml($restaurant->address);?></td>
      <td>
          <a href="<?php echo $this->url('restaurant',
-             array('action'=>'edit', 'id' => $restaurant->id));?>">Edit</a>
+             array('action'=>'edit', 'id' => $restaurant->id));?>">Éditer</a>
          <a href="<?php echo $this->url('restaurant',
-             array('action'=>'delete', 'id' => $restaurant->id));?>">Delete</a>
+             array('action'=>'delete', 'id' => $restaurant->id));?>">Supprimer</a>
      </td>
  </tr>
  <?php endforeach; ?>
