--- a/module/Sign/view/sign/sign/index.phtml
+++ b/module/Sign/view/sign/sign/index.phtml
@@ -1,7 +1,7 @@
  <?php
  // module/Sign/view/sign/sign/add.phtml:
 
- $title = 'Ajouter un nouveau sign';
+ $title = 'S\'inscrire';
  $this->headTitle($title);
  ?>
  <h1><?php echo $this->escapeHtml($title); ?></h1>
@@ -19,6 +19,61 @@ var_dump($success);
  echo $this->formSubmit($form->get('submit'));
  echo $this->form()->closeTag();
 
+ echo "
+
+	<form>
+		<div class=\"row\">
+			<div class=\"col-md-4\"></div>
+			<div class=\"col-md-4\">
+				<div class=\"form-group\">
+					<label for=\"exampleInputEmail1\">Nom</label>
+					<input type=\"nom\" class=\"form-control\" id=\"exampleInputEmail1\" placeholder=\"Nom\">
+				</div>
+			</div>
+			<div class=\"col-md-4\"></div>
+		</div>
+		<div class=\"row\">
+			<div class=\"col-md-4\"></div>
+			<div class=\"col-md-4\">
+				<div class=\"form-group\">
+					<label for=\"exampleInputEmail1\">Adresse mail</label>
+					<input type=\"email\" class=\"form-control\" id=\"exampleInputEmail1\" placeholder=\"Email\">
+				</div>
+			</div>
+			<div class=\"col-md-4\"></div>
+		</div>
+		<div class=\"row\">
+			<div class=\"col-md-4\"></div>
+			<div class=\"col-md-4\">
+				<div class=\"form-group\">
+					<label for=\"exampleInputPassword1\">Mot de passe</label>
+					<input type=\"password\" class=\"form-control\" id=\"exampleInputPassword1\" placeholder=\"Mot de passe\">
+				</div>
+			</div>
+			<div class=\"col-md-4\"></div>
+		</div>
+		<div class=\"row\">
+			<div class=\"col-md-4\"></div>
+			<div class=\"col-md-4\">
+				<div class=\"form-group\">
+					<label for=\"exampleInputPassword1\">Retapez le mot de passe</label>
+					<input type=\"password\" class=\"form-control\" id=\"exampleInputPassword1\" placeholder=\"Mot de passe\">
+				</div>
+			</div>
+			<div class=\"col-md-4\"></div>
+		</div>
+		<div class=\"col-md-4\"></div>
+		<div class=\"col-md-4\">
+			
+			<button type=\"submit\" class=\"btn btn-default\">S'inscrire</button>
+		</div>
+		<div class=\"col-md-4\"></div></div>
+	</form>
+
+";
+ 
+ 
+ 
   // echo $this->formElementErrors($form->get("mark"), array('class' => "some_class", 'message' => "errormessage"));
  ?>
  
