sign + login restyled

--- a/module/SanAuth/view/san-auth/success/index.phtml
+++ b/module/SanAuth/view/san-auth/success/index.phtml
@@ -1,4 +1,4 @@
-Login Success.
+Vous êtes désormais connecté
 <br />
 
-<a href="<?php echo $this->url('home'); ?>">Go home</a>
+<a class="btn btn-primary" href="<?php echo $this->url('home'); ?>">Continuer</a>
