--- a/module/Sign/view/sign/sign/success.phtml
+++ b/module/Sign/view/sign/sign/success.phtml
@@ -1,1 +1,4 @@
-<h2>Succès d'sincripton ! </h2>
+Vous êtes désormais inscrit
+<br />
+
+<a class="btn btn-primary" href="<?php echo $this->url('login'); ?>">Se connecter</a>
