--- a/module/Flick/view/flick/flick/add.phtml
+++ b/module/Flick/view/flick/flick/add.phtml
@@ -1,13 +1,13 @@
 <?php
- // module/Restaurant/view/restaurant/restaurant/add.phtml:
+ // module/Flick/view/flick/flick/add.phtml:
 
- $this->headTitle($title);
+ $this->headTitle("Ajouter un flickr");
  ?>
- <h1><?php echo $this->escapeHtml($title); ?></h1>
+ <h1><?php echo $this->escapeHtml("Ajouter un flick"); ?></h1>
  <?php
  
  // var_dump($form->get('mark'));
- $form->setAttribute('action', $this->url('restaurant', array('action' => 'add', 'class'=>'form-horizontal')));
+ $form->setAttribute('action', $this->url('flick', array('action' => 'add', 'class'=>'form-horizontal')));
  $form->prepare();
   
    echo $this->form()->openTag($form);
@@ -20,37 +20,32 @@
 
 <div class="row">
 	<div class="col-md-6">
-		<div class="bs-callout bs-callout-primary">
+		<div id="ref" class="bs-callout bs-callout-primary">
 			<div class="apanel-body">
 			
 				
 
 				<div class="form-group">
-					<?php	echo $this->formElementErrors($form->get("name"), array('class' => "error")) ?>
 					<label for="field_name" class="col-sm-3 control-label">Titre</label>
 					<div class="col-sm-9">
 						
-						<?php	echo $this->formInput($form->get('name')); ?>
+						<?php	echo $this->formRow($form->get('name')); ?>
 					</div>
 				</div>
 				<div class="form-group">
-					<?php	echo $this->formElementErrors($form->get("fileupload"), array('class' => "error")) ?>
 					<label for="field_name" class="col-sm-3 control-label">Photo</label>
 					<div class="col-sm-9">
-						
-						<?php	echo $this->formInput($form->get('fileupload')); ?>
+						<input type="file" value="" name="fileupload">
 					</div>
 				</div>
 				<div class="form-group">
-					<?php	echo $this->formElementErrors($form->get("comment"), array('class' => "error")) ?>
 					<label for="field_comment" class="col-sm-3 control-label">Commentaire</label>
 					<div class="col-sm-9">
-						<?php	echo $this->formTextarea($form->get('comment')); ?>
+						<?php	echo $this->formRow($form->get('comment')); ?>
 					</div>
 				</div>
 
 				<div class="form-group">
-					<?php	echo $this->formElementErrors($form->get("mark"), array('class' => "error")) ?>
 					<label for="nothing" class="col-sm-3 control-label">Note</label>
 					<div class="col-sm-9">
 
@@ -63,14 +58,15 @@
 							<button type="button" name="4" class="mark btn btn-default"> <span class="glyphicon glyphicon-star<?php echo ($form->get('mark')->getValue() < 4) ? "-empty" : ''; ?>" aria-hidden="true"></span></button>
 							<button type="button" name="5" class="mark btn btn-default"> <span class="glyphicon glyphicon-star<?php echo ($form->get('mark')->getValue() < 5) ? "-empty" : ''; ?>" aria-hidden="true"></span></button>
 						</div>
+						
+						<?php	echo $this->formElementErrors($form->get("mark"), array('class' => "")) ?>
 					</div>
 				</div>
 
 				<div class="form-group">
-					<?php	echo $this->formElementErrors($form->get("address"), array('class' => "error")) ?>
 					<label for="nothing" class="col-sm-3 control-label">Addresse</label>
 					<div class="col-sm-9">
-						<?php	echo $this->formInput($form->get('address')); ?>
+						<?php	echo $this->formRow($form->get('address')); ?>
 					</div>
 				</div>
 
