--- a/module/SanAuth/view/san-auth/auth/login.phtml
+++ b/module/SanAuth/view/san-auth/auth/login.phtml
@@ -17,50 +17,49 @@ echo $this->formCollection($form);
 ?>
 
 
-	<div class="row">
-		<div class="col-md-4"></div>
-		<div class="col-md-4">
-			<h1>Connexion</h1>
-			<div class="form-group">
-				<label for="exampleInputEmail1">Adresse mail</label>
-				<input type="email" class="form-control" id="exampleInputEmail1"  placeholder="Email" value="" required="required" name="email">
-			</div>
-		</div>
-		<div class="col-md-4"></div>
-	</div>
-	<div class="row">
-		<div class="col-md-4"></div>
-		<div class="col-md-4">
-			<div class="form-group">
-				<label for="exampleInputPassword1">Mot de passe</label>
-				<input type="password"  class="form-control" id="exampleInputPassword1" placeholder="Mot de Passe" value="" required="required" name="password">
-			</div>
-		</div>
-		<div class="col-md-4"></div>
-	</div>
-	<div class="col-md-4"></div>
-	<div class="col-md-4">
-		<div class="checkbox">
-			<input type="hidden" value="0" name="rememberme">
-			<label><input type="checkbox" value="1" name="rememberme">Se rapeller de moi ?</label>
-		</div>
-		<button type="submit" class="btn btn-primary">Se connecter</button>
-		
-		<?php
-		if ($this->messages){
-			echo '<hr>';
-			echo '<ul>';
-			foreach($this->messages as $message)
-			{
-			  
-				echo '<li>'.$message.'</li>';
-			}
-			echo '</ul>';
-		}
+		<div class="row">
+			<div class="col-md-4"></div>
+			<div class="col-md-4">	
 
-		?>
+				
+				<div class=" panel panel-default bs-callout bs-callout-primary">
+
+					<div class="panel-body">			
+<h1>Connexion</h1>
+						<div class="form-group">
+							<label for="exampleInputEmail1">Adresse mail</label>
+							<input type="email" class="form-control" id="exampleInputEmail1"  placeholder="Email" value="" required="required" name="email">
+						</div>
+						
+						<div class="form-group">
+							<label for="exampleInputPassword1">Mot de passe</label>
+							<input type="password"  class="form-control" id="exampleInputPassword1" placeholder="Mot de Passe" value="" required="required" name="password">
+						</div>
+						
+						<div class="checkbox">
+							<input type="hidden" value="0" name="rememberme">
+							<label><input type="checkbox" value="1" name="rememberme">Se rapeller de moi ?</label>
+						</div>
+						<button type="submit" class="btn btn-primary">Se connecter</button>
+						
+						<?php
+							if ($this->messages){
+								echo '<hr>';
+								echo '<ul>';
+								foreach($this->messages as $message)
+								{
+								  
+									echo '<li>'.$message.'</li>';
+								}
+								echo '</ul>';
+							}
+						?>
+				</div>
+			</div>
+			<div class="col-md-4"></div>
+		</div>
 	</div>
-	<div class="col-md-4"></div></div>
+
 
 <?php
 
