--- a/module/Friend/view/friend/friend/wall.phtml
+++ b/module/Friend/view/friend/friend/wall.phtml
@@ -13,7 +13,7 @@
 		<ul class="nav nav-pills nav-stacked">
 			<?php
 			if($exists)
-				echo ' <li role="presentation" class="active"><a href="/user/' . $user["real_name"]. '">@' . $user["real_name"] . '</a></li>';
+				echo ' <li role="presentation" class="active"><a href="/user/' . $user["nickname"]. '">@' . $user["nickname"] . '</a></li>';
 			else
 				echo ' <li role="presentation" class="active"><a href="">Utilisateur inconnu</a></li>';
 			?>
@@ -29,7 +29,7 @@
 <?php
 			if($exists) {	
 				echo ' <h1>
-					<span style="font-family: \'Raleway\',sans-serif;font-weight:bold;">@'. $user["real_name"] .'</span>';
+					<span style="font-family: \'Raleway\',sans-serif;font-weight:bold;">@'. $user["nickname"] .'</span>';
 			
 
 					if($user["friendship"]==1){
@@ -65,13 +65,21 @@
 ?>
 			
 
+		<?php
+		if($user["friendship"] != 1) {
+			echo '<table class="table"><tr><td>Vous ne pouvez pas voir les flicks de @'.$user['nickname'].'</td></tr></table>';
+		}
+		else if(count($flicks) == 0) {
+			echo '<table class="table"><tr><td>@'.$user['nickname'].' n\'a pas encore publié de flicks.</td></tr></table>';
+		}
+		?>
 		<?php foreach ($flicks as $flick) : ?>
 
 		<div class="tile <?php if($currentUserId == $flick["owner"]) echo "tile-mine"; ?> panel panel-default">
 			<div class="panel-body">
 
 				<div class="tile-title">
-					<b><?php echo $this->escapeHtml($flick["name"]);?> <a href="<?php echo $this->url('user', array('action'=>'index', 'id' => $flick["real_name"]));?>" >@<?php echo $this->escapeHtml($flick["real_name"]);?></a></b>
+					<b><?php echo $this->escapeHtml($flick["name"]);?> <a href="<?php echo $this->url('user', array('action'=>'index', 'id' => $flick["nickname"]));?>" >@<?php echo $this->escapeHtml($flick["nickname"]);?></a></b>
 					<div class="tile-mark">
 						<?php
 						for($i=1; $i <= 5; $i++){
@@ -119,7 +127,7 @@
 				
 				<div id="friendlist">
 					<?php foreach ($friends as $friend) : ?>
-						<div><a href="<?php echo $this->url('user', array('action'=>'index', 'id' => $friend->real_name));?>">@<?php echo $friend->real_name;?></a></div>
+						<div><a href="<?php echo $this->url('user', array('action'=>'index', 'id' => $friend->nickname));?>">@<?php echo $friend->nickname;?></a></div>
 					<?php endforeach; ?>
 				</div>
 
