--- a/module/SanAuth/view/san-auth/success/index.phtml
+++ b/module/SanAuth/view/san-auth/success/index.phtml
@@ -1,4 +1,18 @@
+		<div class="row">
+
+			<div class="col-md-4"></div>
+			<div class="col-md-4">
+			
+				<div class=" panel panel-default bs-callout bs-callout-primary">
+
+					<div class="panel-body">
+
 Vous êtes désormais connecté
 <br />
 
 <a class="btn btn-primary" href="<?php echo $this->url('home'); ?>">Continuer</a>
+
+</div>
+</div>
+</div>
+</div>
