--- a/module/Sign/view/sign/sign/index.phtml
+++ b/module/Sign/view/sign/sign/index.phtml
@@ -31,7 +31,7 @@
 				?>
 				<div class="form-group">
 					<label for="exampleInputNom">Pseudo </label>
-					<?php echo $this->formInput($form->get('real_name')); ?>
+					<?php echo $this->formInput($form->get('nickname')); ?>
 				</div>
 				<div class="form-group">	
 				<i>Composé de lettres ou chiffres uniquement</i>
