--- a/module/Friend/view/friend/friend/invitations.phtml
+++ b/module/Friend/view/friend/friend/invitations.phtml
@@ -31,7 +31,7 @@
 		<?php foreach ($invitations as $invitation) : ?>
 
 		<tr>
-			<td>@<?php echo $invitation->real_name; ?></td>
+			<td>@<?php echo $invitation->nickname; ?></td>
 			<td><a class="btn btn-primary" href="/friend/add/<?php echo $invitation->id; ?>" role="button" style="float:right;">Ajouter aux amis</a></td>
 		</tr>
 		  
@@ -56,7 +56,7 @@
 				
 				<div id="friendlist">
 					<?php foreach ($friends as $friend) : ?>
-						<div><a href="<?php echo $this->url('user', array('action'=>'index', 'id' => $friend->real_name));?>">@<?php echo $friend->real_name;?></a></div>
+						<div><a href="<?php echo $this->url('user', array('action'=>'index', 'id' => $friend->nickname));?>">@<?php echo $friend->nickname;?></a></div>
 					<?php endforeach; ?>
 				</div>
 
