--- a/module/Sign/view/sign/sign/success.phtml
+++ b/module/Sign/view/sign/sign/success.phtml
@@ -1,4 +1,17 @@
-Vous êtes désormais inscrit
+		<div class="row">
+
+			<div class="col-md-4"></div>
+			<div class="col-md-4">
+			
+				<div class=" panel panel-default bs-callout bs-callout-primary">
+
+					<div class="panel-body">
+					Vous êtes désormais inscrit
 <br />
 
 <a class="btn btn-primary" href="<?php echo $this->url('login'); ?>">Se connecter</a>
+
+</div>
+</div>
+</div>
+</div>
