--- a/module/Flick/view/flick/flick/index.phtml
+++ b/module/Flick/view/flick/flick/index.phtml
@@ -11,8 +11,8 @@
 		<h1>&nbsp;</h1>
 	
 		<ul class="nav nav-pills nav-stacked">
-		  <li role="presentation" class="active"><a href="/">Timeline</a></li>
-		  <li role="presentation"><a href="/me">Vos flicks</a></li>
+		  <li role="presentation" class="active"><a href="./">Timeline</a></li>
+		  <li role="presentation"><a href="./me">Vos flicks</a></li>
 		</ul>
 		
 	
@@ -53,7 +53,7 @@
 
 				</div>
 				<div class="tile-comment"><?php echo $this->escapeHtml($flick["comment"]);?></div>				
-				<img style="width:100%;" src="/assets/<?php echo $this->escapeHtml($flick["fileupload"]);?>" class="img-responsive" alt="Responsive image" />
+				<img style="width:100%;" src="./assets/<?php echo $this->escapeHtml($flick["fileupload"]);?>" class="img-responsive" alt="Responsive image" />
 				
 				<?php echo !is_null($flick["address"]) ? '<div class="tile-address"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>À ' . $this->escapeHtml($flick["address"]).'</div>' : "";?>
 				
@@ -69,7 +69,7 @@
 
 				<h1>Mes amis </h1>
 
-				<form class="form-inline" method="POST" name="friend" action="/search" id="friend">
+				<form class="form-inline" method="POST" name="friend" action="./search" id="friend">
 					<div class="form-group">
 						<input type="text" name="name" class="form-control" id="exampleInputEmail3" value="<?php echo ($searchterm === 0) ? "" : $searchterm; ?>" placeholder="Chercher quelqu'un">
 					</div>
