--- a/module/Friend/view/friend/friend/invitations.phtml
+++ b/module/Friend/view/friend/friend/invitations.phtml
@@ -11,9 +11,9 @@
 		<h1>&nbsp;</h1>
 		
 		<ul class="nav nav-pills nav-stacked">
-		  <li role="presentation" class="active"><a href="/invitations">Invitations</a></li>
-		  <li role="presentation"><a href="/">Timeline</a></li>
-		  <li role="presentation"><a href="/me">Vos flicks</a></li>
+		  <li role="presentation" class="active"><a href="./invitations">Invitations</a></li>
+		  <li role="presentation"><a href="./">Timeline</a></li>
+		  <li role="presentation"><a href="./me">Vos flicks</a></li>
 		</ul>
 		
 	
@@ -32,7 +32,7 @@
 
 		<tr>
 			<td>@<?php echo $invitation->nickname; ?></td>
-			<td><a class="btn btn-primary" href="/friend/add/<?php echo $invitation->id; ?>" role="button" style="float:right;">Ajouter aux amis</a></td>
+			<td><a class="btn btn-primary" href="./friend/add/<?php echo $invitation->id; ?>" role="button" style="float:right;">Ajouter aux amis</a></td>
 		</tr>
 		  
 		<?php endforeach; ?>
@@ -45,7 +45,7 @@
 
 				<h1>Mes amis </h1>
 
-				<form class="form-inline" method="POST" name="friend" action="/search" id="friend">
+				<form class="form-inline" method="POST" name="friend" action="./search" id="friend">
 					<div class="form-group">
 						<input type="text" name="name" class="form-control" id="exampleInputEmail3" value="<?php echo ($searchterm === 0) ? "" : $searchterm; ?>" placeholder="Chercher quelqu'un">
 					</div>
